alpm-types/src/snapshots/url::test_source_url_parsing_failure@case_3.snap
---
source: alpm-types/src/url.rs
---
error: invalid or duplicate query parameter for detected VCS.
 | 
 | git+https://example/project#branch=feature?signed?signed
 | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^
 | 
 = while parsing:
   source url: (git+https://example/…)
   → invalid or duplicate query parameter for detected VCS.
